--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yoyo/tripartite-payment",
+    "name": "user771908231/tripartite-payment",
     "description": "三方支付 make a package",
     "type": "library",
     "license": "MIT",
